sif/Componentes/_CalculadoraNomina/CalculadoraNomina/src/com/soin/rh/calculo/Calculator.java
/* Generated By:JavaCC: Do not edit this line. Calculator.java */
/* faltan las funciones round,floor,ceiling,min,max,iif */

package com.soin.rh.calculo;

import java.util.*;
public class Calculator implements CalculatorConstants {

  private SymbolTable symtable = new SymbolTable();
  public SymbolTable getSymbolTable() { return symtable; }
  public void setSymbolTable(SymbolTable v) { symtable=v; }

  public static void main(String args[]) throws
        ParseException, RHTokenMgrException
  {
    Calculator parser = new Calculator(System.in);
    parser.parse();
  }

  final public void parse() throws ParseException, RHTokenMgrException {
    try {
      parse_with_errors();
    } catch (Error err) {
    {if (true) throw new RHTokenMgrException( err );}
    }
  }

  final public void parse_with_errors() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          Expression();
        } else if (jj_2_3(2)) {
          jj_consume_token(STMTSEPARATOR);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_4(2)) {
          ;
        } else {
          break label_2;
        }
      }
    }
    jj_consume_token(0);
  }

/*
Variant parseOneLine():
{
    Variant a;
}
{
    (<STMTSEPARATOR>)*
    a=Expression() (<STMTSEPARATOR>)*  { return a; }
|   (<STMTSEPARATOR>)+                 { return Variant.VOID; }
|   <EOF>                              { return null; }
}
*/

/*
 * Expression syntax follows.
 */
  final public Variant Expression() throws ParseException {
 Variant v;
    if (jj_2_5(2)) {
      v = Assignment();
    } else if (jj_2_6(2)) {
      v = ConditionalExpression();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public void AssignmentOperator() throws ParseException {
    if (jj_2_7(2)) {
      jj_consume_token(11);
    } else if (jj_2_8(2)) {
      jj_consume_token(12);
    } else if (jj_2_9(2)) {
      jj_consume_token(13);
    } else if (jj_2_10(2)) {
      jj_consume_token(14);
    } else if (jj_2_11(2)) {
      jj_consume_token(15);
    } else if (jj_2_12(2)) {
      jj_consume_token(16);
    } else if (jj_2_13(2)) {
      jj_consume_token(17);
    } else if (jj_2_14(2)) {
      jj_consume_token(18);
    } else if (jj_2_15(2)) {
      jj_consume_token(19);
    } else if (jj_2_16(2)) {
      jj_consume_token(20);
    } else if (jj_2_17(2)) {
      jj_consume_token(21);
    } else if (jj_2_18(2)) {
      jj_consume_token(22);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Variant Assignment() throws ParseException {
    Token lval = null;
    Variant rval;
    lval = jj_consume_token(IDENTIFIER);
    label_3:
    while (true) {
      AssignmentOperator();
      rval = Expression();
                                   if ( lval != null) { symtable.put(lval.toString(), rval);  }
      if (jj_2_19(2)) {
        ;
      } else {
        break label_3;
      }
    }
    {if (true) return symtable.get(lval.toString());}
    throw new Error("Missing return statement in function");
  }

  final public Variant ConditionalExpression() throws ParseException {
    Variant ret;
    Variant expr1, expr2;
    ret = ConditionalOrExpression();
    if (jj_2_20(2)) {
      jj_consume_token(23);
      expr1 = Expression();
      jj_consume_token(24);
      expr2 = ConditionalExpression();
                                        ret = ret.bool ? expr1 : expr2;
    } else {
      ;
    }
    {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Variant ConditionalOrExpression() throws ParseException {
  Variant a,b;
    a = ConditionalAndExpression();
    label_4:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_22(2)) {
        jj_consume_token(25);
      } else if (jj_2_23(2)) {
        jj_consume_token(26);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      b = ConditionalAndExpression();
                                              a = VariantOperations.or(a,b);
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant ConditionalAndExpression() throws ParseException {
  Variant a,b;
    a = EqualityExpression();
    label_5:
    while (true) {
      if (jj_2_24(2)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_25(2)) {
        jj_consume_token(27);
      } else if (jj_2_26(2)) {
        jj_consume_token(28);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      b = EqualityExpression();
                                         a = VariantOperations.and(a,b);
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant EqualityExpression() throws ParseException {
  Variant a,b;
    a = RelationalExpression();
    label_6:
    while (true) {
      if (jj_2_27(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_28(2)) {
        jj_consume_token(29);
        b = RelationalExpression();
                                      a = VariantOperations.equals(a,b);
      } else if (jj_2_29(2)) {
        jj_consume_token(30);
        b = RelationalExpression();
                                      a = VariantOperations.notequals(a,b);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant RelationalExpression() throws ParseException {
 Variant a,b;
    a = AdditiveExpression();
    label_7:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_31(2)) {
        jj_consume_token(31);
        b = AdditiveExpression();
                                  a = VariantOperations.lt(a,b);
      } else if (jj_2_32(2)) {
        jj_consume_token(32);
        b = AdditiveExpression();
                                  a = VariantOperations.gt(a,b);
      } else if (jj_2_33(2)) {
        jj_consume_token(33);
        b = AdditiveExpression();
                                  a = VariantOperations.le(a,b);
      } else if (jj_2_34(2)) {
        jj_consume_token(34);
        b = AdditiveExpression();
                                  a = VariantOperations.ge(a,b);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant AdditiveExpression() throws ParseException {
 Variant a,b;
    a = MultiplicativeExpression();
    label_8:
    while (true) {
      if (jj_2_35(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_36(2)) {
        jj_consume_token(35);
        b = MultiplicativeExpression();
                                       a = VariantOperations.add(a,b);
      } else if (jj_2_37(2)) {
        jj_consume_token(36);
        b = MultiplicativeExpression();
                                       a = VariantOperations.subtract(a,b);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant MultiplicativeExpression() throws ParseException {
 Variant a,b;
    a = UnaryExpression();
    label_9:
    while (true) {
      if (jj_2_38(2)) {
        ;
      } else {
        break label_9;
      }
      if (jj_2_39(2)) {
        jj_consume_token(37);
        b = UnaryExpression();
                              a = VariantOperations.multiply(a,b);
      } else if (jj_2_40(2)) {
        jj_consume_token(38);
        b = UnaryExpression();
                              a = VariantOperations.divide(a,b);
      } else if (jj_2_41(2)) {
        jj_consume_token(39);
        b = UnaryExpression();
                              a = VariantOperations.modulus(a,b);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant UnaryExpression() throws ParseException {
 Variant a;
    if (jj_2_42(2)) {
      jj_consume_token(35);
      a = UnaryExpression();
    } else if (jj_2_43(2)) {
      jj_consume_token(36);
      a = UnaryExpression();
                                a = VariantOperations.negate(a);
    } else if (jj_2_44(2)) {
      a = PreIncrementExpression();
    } else if (jj_2_45(2)) {
      a = UnaryExpressionNotPlusMinus();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant PreIncrementExpression() throws ParseException {
 Variant a;
    if (jj_2_46(2)) {

      jj_consume_token(40);
      a = PrimaryExpression();
                                 {if (true) return VariantOperations.add(a, new Variant(1d));}
    } else if (jj_2_47(2)) {
      jj_consume_token(41);
      a = PrimaryExpression();
                                 {if (true) return VariantOperations.subtract(a, new Variant(1d));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Variant UnaryExpressionNotPlusMinus() throws ParseException {
 Variant a;
    if (jj_2_48(2)) {
      jj_consume_token(42);
      a = UnaryExpression();
                              {if (true) return VariantOperations.negate(a);}
    } else if (jj_2_49(2)) {
      a = PostfixExpression();
                              {if (true) return a;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Variant PostfixExpression() throws ParseException {
 Variant a,b;

    a = PrimaryExpression();
    if (jj_2_52(2)) {
      if (jj_2_50(2)) {
        jj_consume_token(40);
           VariantOperations.add(a, new Variant(1d));
      } else if (jj_2_51(2)) {
        jj_consume_token(41);
           VariantOperations.subtract(a, new Variant(1d));
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Variant PrimaryExpression() throws ParseException {
    Token t;
    Variant a;
    if (jj_2_53(2)) {
      t = jj_consume_token(NUMBER);
                              {if (true) return Variant.parseDouble(t.toString());}
    } else if (jj_2_54(2)) {
      t = jj_consume_token(DATE);
                              {if (true) return Variant.parseDate(t.toString());}
    } else if (jj_2_55(2)) {
      t = jj_consume_token(BOOLEAN);
                              {if (true) return Variant.parseBoolean(t.toString());}
    } else if (jj_2_56(2)) {
      jj_consume_token(43);
      a = Expression();
      jj_consume_token(44);
                              {if (true) return a;}
    } else if (jj_2_57(2)) {
      t = jj_consume_token(IDENTIFIER);
                              {if (true) return symtable.get(t.toString());}
    } else if (jj_2_58(2)) {
      a = FunctionInvocation();
                              {if (true) return a;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Variant FunctionInvocation() throws ParseException {
  Token func;
  Variant arg;
  Invocation mth;
    func = jj_consume_token(FUNCTION);
    jj_consume_token(43);
                          mth = new Invocation(func.toString());
    if (jj_2_60(2)) {
      arg = Expression();
                          mth.addArgument(arg);
      label_10:
      while (true) {
        if (jj_2_59(2)) {
          ;
        } else {
          break label_10;
        }
        jj_consume_token(45);
        arg = Expression();
                          mth.addArgument(arg);
      }
    } else {
      ;
    }
    jj_consume_token(44);
                          {if (true) return mth.invoke();}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_2();
    jj_save(1, xla);
    return retval;
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_3();
    jj_save(2, xla);
    return retval;
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_4();
    jj_save(3, xla);
    return retval;
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_5();
    jj_save(4, xla);
    return retval;
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_6();
    jj_save(5, xla);
    return retval;
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_7();
    jj_save(6, xla);
    return retval;
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_8();
    jj_save(7, xla);
    return retval;
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_9();
    jj_save(8, xla);
    return retval;
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_10();
    jj_save(9, xla);
    return retval;
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_11();
    jj_save(10, xla);
    return retval;
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_12();
    jj_save(11, xla);
    return retval;
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_13();
    jj_save(12, xla);
    return retval;
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_14();
    jj_save(13, xla);
    return retval;
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_15();
    jj_save(14, xla);
    return retval;
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_16();
    jj_save(15, xla);
    return retval;
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_17();
    jj_save(16, xla);
    return retval;
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_18();
    jj_save(17, xla);
    return retval;
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_19();
    jj_save(18, xla);
    return retval;
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_20();
    jj_save(19, xla);
    return retval;
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_21();
    jj_save(20, xla);
    return retval;
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_22();
    jj_save(21, xla);
    return retval;
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_23();
    jj_save(22, xla);
    return retval;
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_24();
    jj_save(23, xla);
    return retval;
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_25();
    jj_save(24, xla);
    return retval;
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_26();
    jj_save(25, xla);
    return retval;
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_27();
    jj_save(26, xla);
    return retval;
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_28();
    jj_save(27, xla);
    return retval;
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_29();
    jj_save(28, xla);
    return retval;
  }

  final private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_30();
    jj_save(29, xla);
    return retval;
  }

  final private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_31();
    jj_save(30, xla);
    return retval;
  }

  final private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_32();
    jj_save(31, xla);
    return retval;
  }

  final private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_33();
    jj_save(32, xla);
    return retval;
  }

  final private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_34();
    jj_save(33, xla);
    return retval;
  }

  final private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_35();
    jj_save(34, xla);
    return retval;
  }

  final private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_36();
    jj_save(35, xla);
    return retval;
  }

  final private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_37();
    jj_save(36, xla);
    return retval;
  }

  final private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_38();
    jj_save(37, xla);
    return retval;
  }

  final private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_39();
    jj_save(38, xla);
    return retval;
  }

  final private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_40();
    jj_save(39, xla);
    return retval;
  }

  final private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_41();
    jj_save(40, xla);
    return retval;
  }

  final private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_42();
    jj_save(41, xla);
    return retval;
  }

  final private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_43();
    jj_save(42, xla);
    return retval;
  }

  final private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_44();
    jj_save(43, xla);
    return retval;
  }

  final private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_45();
    jj_save(44, xla);
    return retval;
  }

  final private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_46();
    jj_save(45, xla);
    return retval;
  }

  final private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_47();
    jj_save(46, xla);
    return retval;
  }

  final private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_48();
    jj_save(47, xla);
    return retval;
  }

  final private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_49();
    jj_save(48, xla);
    return retval;
  }

  final private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_50();
    jj_save(49, xla);
    return retval;
  }

  final private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_51();
    jj_save(50, xla);
    return retval;
  }

  final private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_52();
    jj_save(51, xla);
    return retval;
  }

  final private boolean jj_2_53(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_53();
    jj_save(52, xla);
    return retval;
  }

  final private boolean jj_2_54(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_54();
    jj_save(53, xla);
    return retval;
  }

  final private boolean jj_2_55(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_55();
    jj_save(54, xla);
    return retval;
  }

  final private boolean jj_2_56(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_56();
    jj_save(55, xla);
    return retval;
  }

  final private boolean jj_2_57(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_57();
    jj_save(56, xla);
    return retval;
  }

  final private boolean jj_2_58(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_58();
    jj_save(57, xla);
    return retval;
  }

  final private boolean jj_2_59(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_59();
    jj_save(58, xla);
    return retval;
  }

  final private boolean jj_2_60(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_60();
    jj_save(59, xla);
    return retval;
  }

  final private boolean jj_3_18() {
    if (jj_scan_token(22)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_19() {
    if (jj_3R_20()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_38()) { jj_scanpos = xsp; break; }
      if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    }
    return false;
  }

  final private boolean jj_3_37() {
    if (jj_scan_token(36)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_3R_19()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }
